name:                sdui-beseder
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/oofp/miso-beseder-examples#readme
license:             OtherLicense
license-file:        LICENSE
author:              oofp
maintainer:          oofp
copyright:           2018-2020 oofp
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  ghc-options:         -Wall 
  exposed-modules:     Beseder.SDUI.SDUIContext 
                     , Beseder.SDUI.SDUIRes
                     , Beseder.SDUI.SDUIResImpl
                     , Beseder.SDUI.SDUIHelper
                     , Beseder.SDUI.Resources.UIEvMonitor
                     , Beseder.SDUI.Resources.UIBinMonitor
                     , Beseder.SDUI.Resources.UIBinSwitch
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , network
                     , text
                     , containers
                     , async
                     , stm
                     , haskus-utils
                     , mtl
                     , random
                     , websockets
                     , network
                     , bytestring
                     , template-haskell
                     , stm-containers
                     , type-errors
                     , beseder
                     , sdui
                     , pretty-simple
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, TypeApplications, OverloadedLabels

executable sdui-beseder-test
  hs-source-dirs:      ./Examples/SDUIBeseder
  main-is:             Main.hs
  other-modules:       
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-T -dshow-passes -fomit-interface-pragmas -fprint-potential-instances
  build-depends:       base
                    , beseder
                    , sdui
                    , sdui-beseder
                    , text
                    , mtl
                    , stm
                    , protolude
                    , haskus-utils
                    , bytestring
                    , webTools
                    , pipes
                    , pipes-concurrency

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable sdui-entrance-door
  hs-source-dirs:      ./Examples/SDUIEntranceDoor
  main-is:             Main.hs
  other-modules:       
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-T -dshow-passes -fomit-interface-pragmas -fprint-potential-instances
  build-depends:       base
                    , beseder
                    , sdui
                    , sdui-beseder
                    , text
                    , mtl
                    , stm
                    , protolude
                    , haskus-utils
                    , bytestring
                    , webTools
                    , pipes
                    , pipes-concurrency

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude


source-repository head
  type:     git
  location: https://github.com/oofp/Beseder
